@@ -331,6 +331,7 @@ TF_OPTIONSMENU_GLOSSARY=&Glossary
 TF_OPTIONSMENU_GLOSSARY_TBX_DISPLAY_CONTEXT=&Display Context Description for TBX Glossaries
 TF_OPTIONSMENU_GLOSSARY_EXACT_MATCH=&Use Terms Appearing Separately in the Source Text
 TF_OPTIONSMENU_GLOSSARY_STEMMING=Use Stemming for &Glossary Entries
+TF_OPTIONSMENU_GLOSSARY_REPLACE_ON_INSERT=&Replace Glossary Hits when Inserting Source Text
 
 TF_OPTIONSMENU_DICTIONARY=Dictionar&y
 TF_OPTIONSMENU_DICTIONARY_FUZZY=&Use Fuzzy Matching for Dictionary Entries
